public/styles/layout.css
/*
 * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
 * https://css-tricks.com/international-box-sizing-awareness-day/
 * Do not modify these two selectors, please
 */
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

/*
 * Global layout stuff
 */

body {
  color: #545149;
  background-color: #f4f1ec;
  font-size: 24px;
}

main {
  display: flex;
  width: 90%;
  align-items: center;
  flex-direction: column;
  margin: 0 auto;

}

/*
 * Additional CSS can be defined below or in other CSS files, as per instructions
 */

 

 #tweets-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  
}

.tweet:hover {
  box-shadow: #545149 0px 0px 10px;

}

.tweet {
  
  margin-bottom: 1em;
  width: 100%;
  border: black solid 3px;
  padding: 0.5em;
  

} 

.tweet-header {
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  align-items: center;
  height: min-content;
  width: 100%;
  padding: 0.2em;
  background-color: #f4f1ec;

}

.tweet-header h4 {
  font-family: 'arial';
  font-weight: lighter;
  font-size: smaller;

}

.tweet-header div {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  font-size: smaller;
  padding: 0.2em;

}

#tweets-container article header img {
  width: 50px;
  height: 50px;
  margin-right: 0.75em;

}

.tweet-body {
  border-bottom-style: solid;
  padding: 0.5em;

}

.tweet-body p {
  font-size: smaller;
  margin: 0;
  padding: 0.5em;

}

.tweet-footer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-size: smaller;
  padding: 1.2em;

}

.tweet-footer span {
  font-size: small;
}

.tweet-footer div {
  
  color: #4056a1;
  cursor: pointer;
  
}

.tweet-footer div i {
  padding-left: 0.1em;
  padding-right: 0.1em;

}

.tweet-footer div i:hover {
  color: darkgoldenrod;

}

#compose-tweet {
  display: none;
}

.empty-tweet {
  width: 100%;
  height: 100%;
  background-color: #f4f1ec;
  border: red solid 3px;
  padding: 0.5em;
  display: none;
  text-align: center;
  color: red;

}

.too-long {
  width: 100%;
  height: 100%;
  background-color: #f4f1ec;
  border: red solid 3px;
  padding: 0.5em;
  display: none;
  text-align: center;
  color: red;

}

@media (max-width: 768px) {
  .tweet-header h4 {
    font-size: small;
  }

  .tweet-header div {
    font-size: small;
  }

  .tweet-body p {
    font-size: small;
  }

  .tweet-footer div {
    font-size: small;
  }

}

@media (min-width: 769px) {
  
  #main-header {
    display: flex;
    flex-direction: row;
    /* margin-top: 10em; */
  }

  .new-tweet {
    display: flex;
    width: 100%;
    padding-left: 1.2em;
  }

  #compose-tweet {
    width: 100%;
  }

  .container {
    width: 100%;
    margin-top: 10em;
    margin-right: 2em
  }

  .tweet-header {
    margin-top: 5px;
  }

}

